# SCKATision-Net

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  lisc_augmented.yaml
sckatisation_net/: __init__.py  config.py  data.py  engine.py  metrics.py  model.py  utils.py
scripts/: evaluate.py  gradcam.py  predict.py  train.py
tests/: test_model.py
