[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sckatisation-net"
version = "0.1.0"
description = "PyTorch implementation of SCKATision-Net for WBC classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["sckatisation_net*"]
